<!--
    FILE             : strings.xml
    PROJECT          : PROG3150 - Assignment 1
    PROGRAMMER       : Conor Barr, Eric Emerson, Jack Parkinson, Maxim Mikheev, Rick Bloemert
    FIRST VERSION    : 2020-02-02
    DESCRIPTION      :
        This file contains all strings being used in the application.
-->
<resources>
    <string name="app_name">Trip Planner</string>
    <string name="tripplanner_title">Welcome!</string>
    <string name="tripplanner_help">Help</string>
    <string name="tripplanner_begin">Begin</string>
    <string name="tripplanner_name">to Trip Planner</string>
    <string name="tripplanner_description">Trip Planner is an organizational tool used to help keep track of destinations on your trip. Trip Planner can tell you where you\'re going and how to get there. Press Begin to get started!</string>

    <string name="helpTitle">Help Topic</string>
    <string-array name="help_topics">
        <item>Trip Planner</item>
        <item>Getting Started</item>
        <item>Trip Review</item>
    </string-array>
    <string name="help_not_chosen">Choose a help topic.</string>
    <string-array name="help_desc">
        <item>
            Welcome to Trip Planner!\nTrip Planner is an organizational tool used to help keep track of destinations on your trip.\nTrip Planner can tell you where you\'re going and how to get there.\n
        </item>
        <item>
            Getting started is easy.\nOn the Start screen, simply add a name, start, and end date.\nYou can then add new destination and transit methods dynamically by pressing ADD.\nAt anytime, you may return by pressing CANCEL or the upper left back button.\nOnce finished, you may press ADD TRIP to proceed.\n
        </item>
        <item>
            After setting up the trip, you may review its current progress.\nPressing EDIT will bring you to a screen that lets you modify your current trip.\nPressing FINISH will complete your trip.\n
        </item>
    </string-array>

    <!-- Start Trip Activity -->
    <string name="button_startTrip">Start Trip</string>
    <string name="button_add">Add</string>
    <string name="dt_msg">Enter Name</string>
    <string name="editButton">Edit</string>
    <string name="finishButton">Finish</string>
    <string name="reviewTitle">Review Trip</string>
    <string name="tripplanner_destination">Event Name:</string>
    <string name="tripplanner_label1">ex. Art Museum, Bus Ride</string>
    <string name="tripplanner_buttonConfirm">CONFIRM</string>
    <string name="tripplanner_buttonCancel">CANCEL</string>
    <string name="tripplanner_dest">Destination</string>
    <string name="tripplanner_transit">Transit</string>
    <string name="tripplanner_tripname">Enter Trip Name</string>
    <string name="tripplanner_startdate">Start Date</string>
    <string name="tripplanner_enddate">End Date</string>
    <string name="button_continueTrip">Continue Trip</string>
    <string-array name="dt_spinner">
        <item>Destination</item>
        <item>Transit</item>
    </string-array>

    <string name="itemsAddedCountSuffix">items added.</string>
    <string name="itemsAddedCountStart">No items added.</string>

    <!-- Trip Summary Activity -->
    <string name="label_greeting">You have arrived at your destination!</string>
    <string name="label_summary">We hope your trip was a safe and pleasant one.
        Please click the button below to return to the main menu and plan another trip.</string>
    <string name="button_restart_text">Main Menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tripplanner_default">Unknown Trip</string>
    <string name="tripplanner_view" />
    <string name="tripplanner_view2">View</string>
    <string name="tripplanner_edit">Edit</string>
    <string name="title_activity_trip_list">TripListActivity</string>
    <string name="tripplanner_create">Create Trip</string>
    <string name="tripplanner_complete">Complete</string>


</resources>
