<?xml version="1.0" encoding="utf-8"?>
<!--
    FILE             : activity_trip_summary.xml
    PROJECT          : PROG3150 - Assignment 1
    PROGRAMMER       : Conor Barr, Eric Emerson, Jack Parkinson, Maxim Mikheev, Rick Bloemert
    FIRST VERSION    : 2020-02-02
    DESCRIPTION      :
        This file contains the XML for the TripSummaryActivity.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_restart"
        android:layout_width="368dp"
        android:layout_height="82dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="504dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/button_restart_text"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.TextView

        android:id="@+id/summary_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/label_greeting"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/summary_number"
        app:layout_constraintStart_toStartOf="@+id/summary_number"
        app:layout_constraintTop_creator="20"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </android.widget.TextView>

    <android.widget.TextView
        android:id="@+id/summary_number"
        android:layout_width="327dp"
        android:layout_height="222dp"
        android:layout_marginTop="188dp"
        android:text="@string/label_summary"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01">

    </android.widget.TextView>


</androidx.constraintlayout.widget.ConstraintLayout>
